2009-11-17 Pierre Wieser <pwieser@trychlos.org>

	Make libna-runtime a dynamically loaded library.
	Initialize the API directory.

	* nautilus-actions/api: New directory.

	* nautilus-actions/common/Makefile.am:
	* nautilus-actions/nact/Makefile.am:
	* nautilus-actions/plugin/Makefile.am:
	* nautilus-actions/runtime/Makefile.am:
	* nautilus-actions/test/Makefile.am:
	* nautilus-actions/utils/Makefile.am: Updated accordingly.

	* po/POTFILES.in: Updated to reflect src/ directory renaming.

2009-11-17 Pierre Wieser <pwieser@trychlos.org>

	Rename all src/ tree to nautilus-actions/.

	This will make easier to have an API installed on a host system,
	all headers being included with #include <nautilus-actions/header.h>.

2009-10-28 Pierre Wieser <pwieser@trychlos.org>

	* src/common/na-object-api.h (na_object_reset_status):
	New function.

	* src/common/na-object-fn.h:
	* src/common/na-object.c (na_object_object_reset_status):
	New function.

	* src/nact/base-window.c:
	* src/nact/base-window.h (base_window_get_parent): New function.

	* src/nact/nact-assistant-export.c
	(instance_dispose): Clear the tree model.
	(assist_initial_load_actions_list): Export current actions list.

	* src/nact/nact-iactions-list.c (display_label):
	Only display status in edition mode.

	* src/nact/nact-tree-model.c (fill_tree_store):
	Clean up the code to avoid memory leaks.

	* src/runtime/na-iduplicable.c:
	* src/runtime/na-iduplicable.h (na_iduplicable_reset_status):
	New function.

	* src/common/na-object-api.h
	(na_object_get_position, na_object_insert_at): New functions.

	* src/common/na-object-item-fn.h:
	* src/common/na-object-item.c
	(na_object_item_get_position, na_object_item_insert_at):
	New functions.

	* src/nact/nact-main-menubar.c (save_item):
	Insert the new origin at the same position that the previous one.

	* src/nact/nautilus-actions-config-tool.ui:
	Add a label in front of the internal item id.

	* src/runtime/na-iduplicable.c (na_iduplicable_duplicate):