@@ -1,0 +1,80 @@
+/*
+ * Nautilus Actions
+ * A Nautilus extension which offers configurable context menu modules.
+ *
+ * Copyright (C) 2005 The GNOME Foundation
+ * Copyright (C) 2006, 2007, 2008 Frederic Ruaudel and others (see AUTHORS)
+ * Copyright (C) 2009 Pierre Wieser and others (see AUTHORS)
+ *
+ * This Program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
+ * the License, or (at your option) any later version.
+ *
+ * This Program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public
+ * License along with this Library; see the file COPYING.  If not,
+ * write to the Free Software Foundation, Inc., 59 Temple Place,
+ * Suite 330, Boston, MA 02111-1307, USA.
+ *
+ * Authors:
+ *   Frederic Ruaudel <grumz@grumz.net>
+ *   Rodrigo Moya <rodrigo@gnome-db.org>
+ *   Pierre Wieser <pwieser@trychlos.org>
+ *   ... and many others (see AUTHORS)
+ */
+
+#ifndef __NA_RUNTIME_MODULE_H__
+#define __NA_RUNTIME_MODULE_H__
+
+/**
+ * SECTION: na_module
+ * @short_description: #NAModule class definition.
+ * @include: common/na-module.h
+ *
+ * The NAModule class manages Nautilus-Actions extensions as dynamically
+ * loadable modules.
+ */
+
+#include <glib.h>
+#include <glib-object.h>
+
+G_BEGIN_DECLS
+
+#define NA_MODULE_TYPE					( na_module_get_type())
+#define NA_MODULE( object )				( G_TYPE_CHECK_INSTANCE_CAST( object, NA_MODULE_TYPE, NAModule ))
+#define NA_MODULE_CLASS( klass )		( G_TYPE_CHECK_CLASS_CAST( klass, NA_MODULE_TYPE, NAModuleClass ))
+#define NA_IS_MODULE( object )			( G_TYPE_CHECK_INSTANCE_TYPE( object, NA_MODULE_TYPE ))
+#define NA_IS_MODULE_CLASS( klass )		( G_TYPE_CHECK_CLASS_TYPE(( klass ), NA_MODULE_TYPE ))
+#define NA_MODULE_GET_CLASS( object )	( G_TYPE_INSTANCE_GET_CLASS(( object ), NA_MODULE_TYPE, NAModuleClass ))
+
+typedef struct NAModulePrivate      NAModulePrivate;
+
+typedef struct {
+	GTypeModule      parent;
+	NAModulePrivate *private;
+}
+	NAModule;
+
+typedef struct NAModuleClassPrivate NAModuleClassPrivate;
+
+typedef struct {
+	GTypeModuleClass      parent;
+	NAModuleClassPrivate *private;
+}
+	NAModuleClass;
+
+GType  na_module_get_type               ( void );
+
+GList *na_modules_load_modules          ( void );
+GList *na_module_get_extensions_for_type( GList *modules, GType type );
+gchar *na_module_get_name               ( NAModule *module, GType type );
+void   na_module_release_modules        ( GList *modules );
+
+G_END_DECLS
+
+#endif /* __NA_RUNTIME_MODULE_H__ */
